Resolves: tdf#156467 Let array ROW() and COLUMN() return a scalar value

... instead of a single element matrix.

Change-Id: I8307e24ef68dc54350fbdda74bc61b1df6a5107b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154908
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Jenkins
(cherry picked from commit 49b601937f5ba7739198a1b16ba6da2351897750)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154952
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>